compiler/typ/tests/fixtures/diagnostics/0266_fun_explicit_poly_returns_int_03.ml.infer.expected
File "0266_fun_explicit_poly_returns_int_03.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0266_fun_explicit_poly_returns_int_03 is not a valid module name.

File "0266_fun_explicit_poly_returns_int_03.ml", line 1, characters 31-41:
1 | let bad_gamma : 'a. 'a -> 'a = fun _ -> 2
                                   ^^^^^^^^^^
Error: This definition has type int -> int which is less general than
         'a. 'a -> 'a
       The type int is not a type variable.
